--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                     <span class="text-gray-400 font-semibold group-hover:text-brand-purple-light">MY PORTFOLIO</span>
                 </button>
                 <button id="opportunities-button" data-page="opportunities-page" class="footer-nav-button flex flex-col items-center justify-center text-center text-xs w-1/3 group hover:bg-gray-700 rounded-lg p-2 transition-colors duration-150"> <img src="https://cdn.jsdelivr.net/npm/lucide-static@latest/icons/lightbulb.svg" alt="Opportunities" class="w-6 h-6 mb-1 text-icon-bright-yellow group-hover:text-icon-active-yellow"/>
-                     <span class="text-gray-400 font-semibold group-hover:text-brand-purple-light">MY OPPORTUNITIES</span>
+                     <span class="text-gray-400 font-semibold group-hover:text-brand-purple-light">OPPORTUNITIES</span>
                 </button>
                 <button id="deal-rooms-button" data-page="deal-rooms-page" class="footer-nav-button flex flex-col items-center justify-center text-center text-xs w-1/3 group hover:bg-gray-700 rounded-lg p-2 transition-colors duration-150"> <img src="https://cdn.jsdelivr.net/npm/lucide-static@latest/icons/message-square.svg" alt="Deal Rooms" class="w-6 h-6 mb-1 text-icon-bright-pink group-hover:text-icon-active-pink"/>
                      <span class="text-gray-400 font-semibold group-hover:text-brand-purple-light">DEAL ROOMS</span>
