--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
             <div id="opportunities-page" class="page">
                 <main class="page-content">
-                    <h2 class="text-xl font-semibold mb-4 text-indigo-300">Opportunities</h2>
+                    <h2 class="text-xl font-semibold mb-4 text-indigo-300">My Opportunities</h2>
                      <div class="space-y-6">
                         <div class="p-4 bg-card border border-card rounded-lg shadow">
                              <img src="https://placehold.co/400x100/1f2937/e0e7ff?text=EduTech+Opportunity" alt="EduLearn Zambia" class="w-full h-24 object-cover rounded-md mb-3" onerror="this.src='https://placehold.co/400x100/374151/9ca3af?text=Image+Error'">
